test-env-manual-deployment/codeforge/codeforge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeforge-service
  labels:
    app: codeforge-app
spec:
  selector:
    app: codeforge-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
