test-env-manual-deployment/codeforge/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-setup
  annotations:
    #          ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: codeforge
                port:
                  number: 5678
